@@ -5,7 +5,7 @@
         <a href="[[+prevLink]]" class="mxcnav" id="mxcprevlnk">&lt;</a>
         <a href="[[+nextLink]]" class="mxcnav" id="mxcnextlnk">&gt;</a>
     </span>
-    <span class="label">[[+headingLabel:date=`%B %Y`]]</span>
+    <span class="label">[[%mxcalendars.label_month_[[+headingLabel:date=`%m`]]]] [[+headingLabel:date=`%Y`]]</span>
 
     <table id="[[+containerID]]" class="[[+containerClass]]">
     [[+weeks]]    
