@@ -70,6 +70,18 @@ $_lang['mxcalendars.label_month_09'] = 'September';
 $_lang['mxcalendars.label_month_10'] = 'October';
 $_lang['mxcalendars.label_month_11'] = 'November';
 $_lang['mxcalendars.label_month_12'] = 'December';
+$_lang['mxcalendars.label_month_01_short'] = 'Jan';
+$_lang['mxcalendars.label_month_02_short'] = 'Feb';
+$_lang['mxcalendars.label_month_03_short'] = 'Mar';
+$_lang['mxcalendars.label_month_04_short'] = 'Apr';
+$_lang['mxcalendars.label_month_05_short'] = 'May';
+$_lang['mxcalendars.label_month_06_short'] = 'Jun';
+$_lang['mxcalendars.label_month_07_short'] = 'Jul';
+$_lang['mxcalendars.label_month_08_short'] = 'Aug';
+$_lang['mxcalendars.label_month_09_short'] = 'Sep';
+$_lang['mxcalendars.label_month_10_short'] = 'Oct';
+$_lang['mxcalendars.label_month_11_short'] = 'Nov';
+$_lang['mxcalendars.label_month_12_short'] = 'Dec';
 $_lang['mxcalendars.label_allday'] = 'All Day Event';
 $_lang['mxcalendars.label_daily'] = 'Daily';
 $_lang['mxcalendars.label_weekly'] = 'Weekly';
