@@ -71,6 +71,18 @@ $_lang['mxcalendars.label_month_09'] = 'Septembre';
 $_lang['mxcalendars.label_month_10'] = 'Octobre';
 $_lang['mxcalendars.label_month_11'] = 'Novembre';
 $_lang['mxcalendars.label_month_12'] = 'Décembre';
+$_lang['mxcalendars.label_month_01_short'] = 'Jan';
+$_lang['mxcalendars.label_month_02_short'] = 'Fév';
+$_lang['mxcalendars.label_month_03_short'] = 'Mar';
+$_lang['mxcalendars.label_month_04_short'] = 'Avr';
+$_lang['mxcalendars.label_month_05_short'] = 'Mai';
+$_lang['mxcalendars.label_month_06_short'] = 'Jui';
+$_lang['mxcalendars.label_month_07_short'] = 'Jui';
+$_lang['mxcalendars.label_month_08_short'] = 'Aoû';
+$_lang['mxcalendars.label_month_09_short'] = 'Sep';
+$_lang['mxcalendars.label_month_10_short'] = 'Oct';
+$_lang['mxcalendars.label_month_11_short'] = 'Nov';
+$_lang['mxcalendars.label_month_12_short'] = 'Déc';
 $_lang['mxcalendars.label_allday'] = 'Toute la journée';
 $_lang['mxcalendars.label_daily'] = 'Tous les jours';
 $_lang['mxcalendars.label_weekly'] = 'Hebdomadaire';
