@@ -70,6 +70,18 @@ $_lang['mxcalendars.label_month_09'] = 'September';
 $_lang['mxcalendars.label_month_10'] = 'Ottobre';
 $_lang['mxcalendars.label_month_11'] = 'Novembre';
 $_lang['mxcalendars.label_month_12'] = 'Dicembre';
+$_lang['mxcalendars.label_month_01_short'] = 'Gen';
+$_lang['mxcalendars.label_month_02_short'] = 'Feb';
+$_lang['mxcalendars.label_month_03_short'] = 'Mar';
+$_lang['mxcalendars.label_month_04_short'] = 'Apr';
+$_lang['mxcalendars.label_month_05_short'] = 'Mag';
+$_lang['mxcalendars.label_month_06_short'] = 'Giu';
+$_lang['mxcalendars.label_month_07_short'] = 'Lug';
+$_lang['mxcalendars.label_month_08_short'] = 'Ago';
+$_lang['mxcalendars.label_month_09_short'] = 'Sep';
+$_lang['mxcalendars.label_month_10_short'] = 'Ott';
+$_lang['mxcalendars.label_month_11_short'] = 'Nov';
+$_lang['mxcalendars.label_month_12_short'] = 'Dic';
 $_lang['mxcalendars.label_allday'] = 'Evento tutto il giorno';
 $_lang['mxcalendars.label_daily'] = 'Giornaliero';
 $_lang['mxcalendars.label_weekly'] = 'Settimanale';
