@@ -70,6 +70,18 @@ $_lang['mxcalendars.label_month_09'] = 'сентябрь';
 $_lang['mxcalendars.label_month_10'] = 'Октябрь';
 $_lang['mxcalendars.label_month_11'] = 'Ноябрь';
 $_lang['mxcalendars.label_month_12'] = 'декабрь';
+$_lang['mxcalendars.label_month_01_short'] = 'Янв';
+$_lang['mxcalendars.label_month_02_short'] = 'Фев';
+$_lang['mxcalendars.label_month_03_short'] = 'Мар';
+$_lang['mxcalendars.label_month_04_short'] = 'Апр';
+$_lang['mxcalendars.label_month_05_short'] = 'Май';
+$_lang['mxcalendars.label_month_06_short'] = 'Июн';
+$_lang['mxcalendars.label_month_07_short'] = 'Июл';
+$_lang['mxcalendars.label_month_08_short'] = 'Авг';
+$_lang['mxcalendars.label_month_09_short'] = 'сен';
+$_lang['mxcalendars.label_month_10_short'] = 'Окт';
+$_lang['mxcalendars.label_month_11_short'] = 'Ноя';
+$_lang['mxcalendars.label_month_12_short'] = 'дек';
 $_lang['mxcalendars.label_allday'] = 'Весь день';
 $_lang['mxcalendars.label_daily'] = 'Каждый день';
 $_lang['mxcalendars.label_weekly'] = 'Каждую неделю';
